--- a/assets/css/style/style.css
+++ b/assets/css/style/style.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
+
+/**** 공통 영역 ****/
 .whoel_wrap{}
 .center_wrap{}
 
-/**** 공통 영역 ****/
 /* 헤더 */
 header{position: fixed; width: 100%; height: 50px; background: rgba(255,255,255,0.8); display: flex; align-items: center; justify-content: space-between; padding: 0 24px; z-index: 5;}
 header .logo_wrap{}
@@ -89,8 +90,11 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
 .main_hero .contact_btn_wrap a .hover{display: none;}
 .main_hero .contact_btn_wrap a:hover .hover{display: block;}
 
-.main_overview{padding-bottom: 300px; background: url(../../images/sphere.png) no-repeat right 20px bottom 120px / 40vw;}
+.main_overview{padding-bottom: 200px; background: url(../../images/sphere.png) no-repeat right 20px top -15vw / 40vw;}
 .main_overview p{margin-top: 24px; font-weight: 400;}
+.main_overview .company{margin-top: 300px;}
+.main_overview .company .ticker_wrap img{width: 150px;}
+.main_overview .company .slick-track{display: flex; align-items: center;}
 
 .works{padding-bottom: 300px;}
 .works article:nth-of-type(1){margin-top: 24px;}
@@ -149,14 +153,28 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
 .main_contact{padding-bottom: 200px;}
 .main_contact article{margin-top: 20px;}
 
-.work_title{padding: 120px 20px 160px;}
-.work_title p{font-size: 30px; font-weight: 400; color: #1400ff; line-height: 1.2;}
+.page_title{padding: 120px 20px 160px;}
+.page_title p{font-size: 30px; font-weight: 400; color: #1400ff; line-height: 1.2;}
 
 
+/**** review 페이지 ****/
+.review_wrap{padding-bottom: 200px;}
+.review_wrap .slider_wrap{width: 400px; margin: 100px auto 0; position: relative;}
+.review_wrap .slider_wrap img{width: 400px;}
+.review_wrap .slider_wrap button{position: absolute; top: 50%; transform: translateY(-50%); left: -50px; font-size: 40px;}
+.review_wrap .slider_wrap button.next{left: auto; right: -50px;;}
 
 
-
-
+/**** contact 페이지 ****/
+.contact_section{background: url(../../images/contact_bg.png) no-repeat left 0 bottom 0;}
+.contact_section .contact_cont{margin-top: 100px; padding-left: 40vw; padding-bottom: 300px;}
+.contact_section .contact_cont article{border-top: 1px solid #e5e7eb; display: flex;}
+.contact_section .contact_cont article:first-of-type{border-top-color: #000;}
+.contact_section .contact_cont article .left{}
+.contact_section .contact_cont article .left .num{font-size: 60px; font-weight: 400;}
+.contact_section .contact_cont article .right{margin-left: 10vw;}
+.contact_section .contact_cont article .right .tit{font-size: 24px; margin-top: 20px; font-weight: 400;}
+.contact_section .contact_cont article .right p{font-size: 16px; margin-top: 10px; padding-bottom: 20px;}
 
 
 
@@ -216,6 +234,8 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
   .main_hero .contact_btn_wrap a:hover .hover{display: none;}
 
   .main_overview{background: url(../../images/sphere.png) no-repeat right 20px bottom 40px / 40vw;}
+  .main_overview .company{margin-top: 120px; padding-bottom: 20vw;}
+  .main_overview .company .ticker_wrap img{width: 100px;}
     
   .works{}
   .works article .boxes{display: block; margin-top: 20px;}
@@ -244,7 +264,15 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
   .modal_wrap article .description{margin-top: 10px;}
   .modal_wrap article .description .right p{font-size: 14px;}
 
+  /**** review 페이지 ****/
+  .review_wrap .slider_wrap{width: 320px; margin: 40px auto 0; position: relative;}
+  .review_wrap .slider_wrap img{width: 320px;}
+  .review_wrap .slider_wrap button{top: auto; transform: none; left: 50px;}
+  .review_wrap .slider_wrap button.next{left: auto; right: 50px;}
 
 
-
+  /**** contact 페이지 ****/
+  /* .contact_section{background: url(../../images/contact_bg.png) no-repeat left 0 bottom 0;} */
+  .contact_section .contact_cont{padding-left: 15vw;}
+  .contact_section .contact_cont article .left .num{font-size: 40px; margin-top: 10px;}
 }
