--- a/assets/css/style/style.css
+++ b/assets/css/style/style.css
@@ -67,8 +67,9 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
 
 /**** 메인, work 페이지 ****/
 .main_hero{background: url(../../images/hero.jpg) no-repeat 20% 30% / 110%; padding-top: 5vw; text-align: center; padding-bottom: 80px; position: relative;}
-.main_hero .hero_tit{font-weight: 400; font-size: 18vw; letter-spacing: -0.1em; color: #1400ff; position: absolute; left: 50%; top: 30%; transform: translate(-50%);}
-.main_hero .hero_tit p{transition: opacity 0.2s; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); white-space: nowrap;}
+.main_hero .hero_tit{position: absolute; left: 50%; top: 30%; transform: translate(-50%);}
+.main_hero .hero_tit .upper_tit{position: absolute; font-size: 2vw; left: -40vw; top: -11vw;}
+.main_hero .hero_tit p{font-weight: 400; font-size: 18vw; letter-spacing: -0.1em; color: #1400ff; transition: opacity 0.2s; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); white-space: nowrap;}
 .main_hero .hero_tit p span{letter-spacing: 0.1em;}
 .main_hero .hero_tit .normal{margin-left: -3vw;}
 .main_hero .hero_tit:hover .normal{opacity: 0;}
@@ -217,6 +218,7 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
   /**** 메인페이지 ****/
   .main_hero{background: url(../../images/hero.jpg) no-repeat 0% 20% / 110%;}
   .main_hero .hero_tit{top: 20%;}
+  .main_hero .hero_tit .upper_tit{font-size: 2.5vw;}
   .main_hero .hero_tit:hover .normal{opacity: 1;}
   .main_hero .hero_tit .hover{display: none;}
   .main_hero .hero_tit .circle{display: none;}
