--- a/assets/css/style/style.css
+++ b/assets/css/style/style.css
@@ -20,6 +20,7 @@ header .nav_wrap a.on{color: #1400ff;}
 section{border-top: 1px solid #000; padding: 0 20px;}
 h3{font-size: 60px; color: #1400ff;}
 h4{font-size: 32px; font-weight: 100; margin-top: 48px;}
+.sub_title{}
 
 /* 버튼 */
 .btn_normal{display: inline-block; padding: 12px 96px; border: 1px solid #1400ff;}
@@ -151,6 +152,29 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
 .works article .more{margin-top: 100px; text-align: center;}
 .works article .more a{font-size: 18px;}
 
+.features{padding-bottom: 300px;}
+.features .tab_wrap{width: 1100px; margin: 40px auto 0;}
+.features .tab_wrap .tabs{text-align: center;}
+.features .tab_wrap .tabs button{padding: 0 12px; margin: 0 4px; border-bottom: 4px solid transparent; font-size: 18px; color: #888;}
+.features .tab_wrap .tabs button:hover{color: #000;}
+.features .tab_wrap .tabs button.on{border-color: #1400ff; color: #000;}
+.features .tab_wrap .tab_conts{margin-top: 48px;}
+.features .tab_wrap .tab_conts .conts_wrap{display: none;}
+.features .tab_wrap .tab_conts .conts_wrap:nth-of-type(1){display: block;}
+.features .tab_wrap .tab_conts .conts{display: flex; flex-wrap: wrap; justify-content: space-between; gap: 40px;}
+.features .tab_wrap .tab_conts .conts article{}
+.features .tab_wrap .tab_conts .conts article .tit{font-size: 24px; font-weight: 400;}
+.features .tab_wrap .tab_conts .conts article .img_box{overflow: hidden; margin-top: 4px; border: 1px solid #000; display: inline-block;}
+.features .tab_wrap .tab_conts .conts article .img_box img{transition: 0.3s;}
+.features .tab_wrap .tab_conts .conts article .img_box img:hover{scale: 1.1;}
+.features .tab_wrap .tab_conts .conts article p{margin-top: 4px;}
+@media screen and (max-width:1150px){
+  .features .tab_wrap{width: 100%;}
+  .features .tab_wrap .tab_conts .conts article{margin-top: 20px; width: calc(50% - 20px);}
+  .features .tab_wrap .tab_conts .conts article .img_box{}
+  .features .tab_wrap .tab_conts .conts article .img_box img{width: 100%;}
+}
+
 .main_contact{padding-bottom: 200px;}
 .main_contact article{margin-top: 20px;}
 
@@ -255,6 +279,13 @@ body.freeze{width: 100%; height: 100%; overflow: hidden;}
   .works article .boxes a .txt .sub::before{content: '-';}
   .works article .boxes a .txt .sub::after{content: '-';}
   .works article .more a{font-size: 14px;}
+
+  .features .tab_wrap .tabs button{margin: 2px 0 0;}
+  .features .tab_wrap .tab_conts .conts{display: block;}
+  .features .tab_wrap .tab_conts .conts article{width: 100%;}
+  .features .tab_wrap .tab_conts .conts article .img_box{width: 100%;}
+  .features .tab_wrap .tab_conts .conts article .img_box img{transition: 0;}
+  .features .tab_wrap .tab_conts .conts article .img_box img:hover{scale: 1;}
 
   /* 모달 팝업 */
   .modal_wrap article{padding: 60px 20px 20px; top: 20px; bottom: 20px;}
